src/styles.scss
* {
  box-sizing: border-box;
}

body, html {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
  "Droid Sans", "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  color: #000;
  min-height: 100vh;
  padding: 0;
  margin: 0;
}

body {
  background: linear-gradient(55deg, rgba(225, 230, 252, .3) 40%, rgba(212, 254, 252, .3) 80%), radial-gradient(circle, #fbf0fe 14%, #f2eff3 42%, #dbeffa 80%)
}

ul, ol {
  padding: 0;
  margin: 0;
  list-style: none;
}

a {
  text-decoration: none;
  color: #adaeb0;
}


.sub-navi {
  display: grid;
  grid-gap: 4px;
  grid-auto-rows: max-content;
}

.view {
  padding: 3rem;
  width: 100%;
  display: grid;
  grid-template-columns: 320px 2fr;
  grid-gap: 2rem;

  .view-header{
    text-transform: uppercase;
    color: #000;
    font-weight: 700;
    font-size: 250%;
    letter-spacing: -1px;
  }
}

